--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,12 @@
     "fastify": "^4.12.0"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "prisma": "^4.9.0",
     "tsx": "^3.12.2",
     "typescript": "^4.9.4"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
