--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@fastify/cors": "^8.2.0",
     "@prisma/client": "^4.9.0",
-    "fastify": "^4.12.0"
+    "dayjs": "^1.11.7",
+    "fastify": "^4.12.0",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
