--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-checkbox": "^1.0.1",
     "@radix-ui/react-popover": "^1.0.3",
     "@tailwindcss/typography": "^0.5.9",
+    "axios": "^1.3.2",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
     "phosphor-react": "^1.4.1",
